@@ -21,6 +21,7 @@ import static org.openmetadata.service.jdbi3.ListFilter.NULL_PARAM;
 import static org.openmetadata.service.jdbi3.RoleRepository.DOMAIN_ONLY_ACCESS_ROLE;
 import static org.openmetadata.service.security.DefaultAuthorizer.getSubjectContext;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import jakarta.validation.constraints.NotNull;
 import jakarta.ws.rs.WebApplicationException;
 import jakarta.ws.rs.core.SecurityContext;
@@ -67,9 +68,9 @@ import org.openmetadata.schema.utils.JsonUtils;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.exception.CatalogExceptionMessage;
 import org.openmetadata.service.exception.EntityNotFoundException;
-import org.openmetadata.service.jdbi3.CollectionDAO.EntityRelationshipRecord;
-import org.openmetadata.service.jdbi3.CollectionDAO.EntityVersionPair;
-import org.openmetadata.service.jdbi3.CollectionDAO.UsageDAO;
+import org.openmetadata.service.jdbi3.AccessControlDAOs.UsageDAO;
+import org.openmetadata.service.jdbi3.CoreRelationshipDAOs.EntityRelationshipRecord;
+import org.openmetadata.service.jdbi3.CoreRelationshipDAOs.EntityVersionPair;
 import org.openmetadata.service.jdbi3.EntityRepository;
 import org.openmetadata.service.jdbi3.ListFilter;
 import org.openmetadata.service.resources.feeds.MessageParser.EntityLink;
@@ -408,16 +409,14 @@ public final class EntityUtil {
     }
 
     // Convert UUIDs to strings for the batch query
-    List<String> entityIdStrings =
-        entityIds.stream().map(UUID::toString).collect(java.util.stream.Collectors.toList());
+    List<String> entityIdStrings = entityIds.stream().map(UUID::toString).toList();
 
     // Use the new batch query method for efficient bulk fetching
-    List<org.openmetadata.service.jdbi3.CollectionDAO.UsageDAO.UsageDetailsWithId>
-        usageDetailsList = usageDAO.getLatestUsageBatch(entityIdStrings);
+    List<UsageDAO.UsageDetailsWithId> usageDetailsList =
+        usageDAO.getLatestUsageBatch(entityIdStrings);
 
     // Convert the list back to a map keyed by UUID
-    for (org.openmetadata.service.jdbi3.CollectionDAO.UsageDAO.UsageDetailsWithId usageWithId :
-        usageDetailsList) {
+    for (UsageDAO.UsageDetailsWithId usageWithId : usageDetailsList) {
       if (usageWithId != null && usageWithId.getEntityId() != null) {
         usageMap.put(UUID.fromString(usageWithId.getEntityId()), usageWithId.getUsageDetails());
       }
@@ -530,6 +529,39 @@ public final class EntityUtil {
           throw new IllegalArgumentException(CatalogExceptionMessage.invalidField(field));
         }
       }
+    }
+
+    public Fields(Set<String> allowedFields, String fieldsParam, boolean ignoreExtra) {
+      if (nullOrEmpty(fieldsParam)) {
+        this.fieldList = new HashSet<>();
+        return;
+      }
+
+      Set<String> parsedFields = parseFields(fieldsParam);
+      this.fieldList = validateFields(parsedFields, allowedFields, ignoreExtra);
+    }
+
+    private Set<String> validateFields(
+        Set<String> inputFields, Set<String> allowedFields, boolean ignoreExtra) {
+
+      Set<String> result = new HashSet<>();
+
+      for (String field : inputFields) {
+        if (allowedFields.contains(field)) {
+          result.add(field);
+        } else if (!ignoreExtra) {
+          throw new IllegalArgumentException(CatalogExceptionMessage.invalidField(field));
+        }
+      }
+
+      return result;
+    }
+
+    private Set<String> parseFields(String fieldsParam) {
+      return Arrays.stream(fieldsParam.split(","))
+          .map(String::trim)
+          .filter(s -> !s.isEmpty())
+          .collect(Collectors.toSet());
     }
 
     public Fields(Set<String> allowedFields, Set<String> fieldsParam) {
@@ -1070,6 +1102,94 @@ public final class EntityUtil {
     }
   }
 
+  /**
+   * Restricts a Domain listing to the user's own domains and their sub-domains when the user is
+   * domain-restricted (holds {@code DomainOnlyAccessRole}). Domains are not themselves tagged with a
+   * domain, so the generic {@link #addDomainQueryParam} filter does not apply to them — this adds a
+   * self-referential filter on the Domain entity's id and fully-qualified-name hierarchy. Inert for
+   * admins, bots, and users without the role.
+   */
+  public static void applyDomainSelfRestriction(
+      SecurityContext securityContext, ListFilter filter) {
+    SubjectContext subjectContext = getSubjectContext(securityContext);
+    if (!subjectContext.isAdmin()
+        && !subjectContext.isBot()
+        && subjectContext.hasAnyRole(DOMAIN_ONLY_ACCESS_ROLE)) {
+      List<EntityReference> userDomains = subjectContext.getUserDomains();
+      filter.addQueryParam("restrictToDomainIds", getCommaSeparatedIdsFromRefs(userDomains));
+      filter.addQueryParam(
+          "restrictToDomainFqnHashes", getCommaSeparatedDomainFqnHashes(userDomains));
+    }
+  }
+
+  // Sentinel owner id that matches no entity_relationship row. Used when an owner filter was
+  // requested but nothing resolved, so the filter yields an empty result rather than every entity.
+  private static final String NO_MATCH_OWNER_ID = "00000000-0000-0000-0000-000000000000";
+
+  /**
+   * Resolves a comma-separated list of owner identifiers to a comma-separated list of ids, so an
+   * owner filter can hit the indexed entity_relationship.fromId directly instead of joining
+   * user/team tables. A value that is already a UUID is accepted as-is (it is not existence-checked);
+   * a name/FQN is resolved to a user or team id, and is dropped if it matches neither. Returns null
+   * when the input is blank (no filter); when a non-blank input resolves to nothing, returns a
+   * sentinel id that matches no rows so the caller filters to an empty result instead of the full
+   * list.
+   */
+  public static String resolveOwnersToIds(String owners) {
+    if (nullOrEmpty(owners)) {
+      return null;
+    }
+    List<String> ids = new ArrayList<>();
+    for (String owner : owners.split(",")) {
+      String id = resolveOwnerToId(owner.trim());
+      if (id != null) {
+        ids.add(id);
+      }
+    }
+    return ids.isEmpty() ? NO_MATCH_OWNER_ID : String.join(",", ids);
+  }
+
+  private static String resolveOwnerToId(String owner) {
+    if (nullOrEmpty(owner)) {
+      return null;
+    }
+    if (isUuid(owner)) {
+      return owner;
+    }
+    EntityReference reference = resolveUserOrTeam(owner);
+    return reference == null ? null : reference.getId().toString();
+  }
+
+  private static EntityReference resolveUserOrTeam(String name) {
+    try {
+      return Entity.getEntityReferenceByName(Entity.USER, name, NON_DELETED);
+    } catch (EntityNotFoundException userNotFound) {
+      try {
+        return Entity.getEntityReferenceByName(Entity.TEAM, name, NON_DELETED);
+      } catch (EntityNotFoundException teamNotFound) {
+        LOG.debug("Owner filter: '{}' did not resolve to a user or team", name);
+        return null;
+      }
+    }
+  }
+
+  private static boolean isUuid(String value) {
+    try {
+      UUID.fromString(value);
+      return true;
+    } catch (IllegalArgumentException notUuid) {
+      return false;
+    }
+  }
+
+  private static String getCommaSeparatedDomainFqnHashes(List<EntityReference> references) {
+    return listOrEmpty(references).stream()
+        .map(EntityReference::getFullyQualifiedName)
+        .filter(fqn -> !nullOrEmpty(fqn))
+        .map(FullyQualifiedName::buildHash)
+        .collect(Collectors.joining(","));
+  }
+
   public static String encodeEntityFqn(String fqn) {
     return URLEncoder.encode(fqn.trim(), StandardCharsets.UTF_8).replace("+", "%20");
   }
@@ -1174,5 +1294,136 @@ public final class EntityUtil {
     return changeDescription.getFieldsAdded().isEmpty()
         && changeDescription.getFieldsUpdated().isEmpty()
         && changeDescription.getFieldsDeleted().isEmpty();
+  }
+
+  // Field names of an EntityReference stored on a custom property, per the
+  // EntityReference JSON Schema. Either ID or FQN is a valid lookup key alongside TYPE.
+  private static final String REF_FIELD_TYPE = "type";
+  private static final String REF_FIELD_ID = "id";
+  private static final String REF_FIELD_FQN = Entity.FIELD_FULLY_QUALIFIED_NAME;
+  private static final String CUSTOM_PROPERTY_ERROR_PREFIX = "Custom property '%s' %s";
+
+  /**
+   * Validate a single entity reference stored on an {@code entityReference} custom property and
+   * confirm the referenced entity exists. The value must be an object carrying {@code type} plus
+   * either {@code id} or {@code fullyQualifiedName}. Throws {@link IllegalArgumentException} with a
+   * descriptive message when the reference is malformed or its target cannot be found.
+   */
+  public static void validateCustomPropertyEntityReference(JsonNode fieldValue, String fieldName) {
+    if (fieldValue != null && !fieldValue.isNull()) {
+      if (!fieldValue.isObject()) {
+        throw new IllegalArgumentException(
+            customPropertyError(fieldName, "must be an object with " + referenceShapeHint()));
+      }
+      resolveEntityReference(fieldValue, fieldName);
+    }
+  }
+
+  /**
+   * Validate an {@code entityReferenceList} custom property: the value must be an array of entity
+   * references, each resolvable to an existing entity (see {@link
+   * #validateCustomPropertyEntityReference}).
+   */
+  public static void validateCustomPropertyEntityReferenceList(
+      JsonNode fieldValue, String fieldName) {
+    if (fieldValue != null && !fieldValue.isNull()) {
+      if (!fieldValue.isArray()) {
+        throw new IllegalArgumentException(
+            customPropertyError(fieldName, "must be an array of entity references"));
+      }
+      int index = 0;
+      for (JsonNode ref : fieldValue) {
+        validateReferenceElement(ref, fieldName, index);
+        index++;
+      }
+    }
+  }
+
+  private static void validateReferenceElement(JsonNode ref, String fieldName, int index) {
+    if (ref == null || ref.isNull()) {
+      throw new IllegalArgumentException(
+          customPropertyError(
+              fieldName, "must contain only non-null entity references at index " + index));
+    }
+    if (!ref.isObject()) {
+      throw new IllegalArgumentException(
+          customPropertyError(
+              fieldName,
+              "must contain only objects with " + referenceShapeHint() + " at index " + index));
+    }
+    resolveEntityReference(ref, fieldName);
+  }
+
+  private static void resolveEntityReference(JsonNode ref, String fieldName) {
+    String type =
+        requireText(
+            ref.get(REF_FIELD_TYPE), fieldName, "reference requires " + referenceShapeHint());
+    JsonNode idNode = ref.get(REF_FIELD_ID);
+    JsonNode fqnNode = ref.get(REF_FIELD_FQN);
+    if (hasText(idNode)) {
+      resolveReferenceById(type, idNode.asText(), fieldName);
+    } else if (hasText(fqnNode)) {
+      resolveReferenceByName(type, fqnNode.asText(), fieldName);
+    } else {
+      throw new IllegalArgumentException(
+          customPropertyError(
+              fieldName,
+              String.format(
+                  "reference requires either '%s' or '%s'", REF_FIELD_ID, REF_FIELD_FQN)));
+    }
+  }
+
+  private static void resolveReferenceById(String type, String idText, String fieldName) {
+    UUID id = parseReferenceId(idText, fieldName);
+    try {
+      Entity.getEntityReferenceById(type, id, NON_DELETED);
+    } catch (EntityNotFoundException e) {
+      throw new IllegalArgumentException(missingReferenceError(fieldName, type, idText), e);
+    }
+  }
+
+  private static void resolveReferenceByName(String type, String fqn, String fieldName) {
+    try {
+      Entity.getEntityReferenceByName(type, fqn, NON_DELETED);
+    } catch (EntityNotFoundException e) {
+      throw new IllegalArgumentException(missingReferenceError(fieldName, type, fqn), e);
+    }
+  }
+
+  private static UUID parseReferenceId(String idText, String fieldName) {
+    UUID id;
+    try {
+      id = UUID.fromString(idText);
+    } catch (IllegalArgumentException e) {
+      throw new IllegalArgumentException(
+          customPropertyError(
+              fieldName, String.format("reference has an invalid '%s': %s", REF_FIELD_ID, idText)));
+    }
+    return id;
+  }
+
+  private static boolean hasText(JsonNode node) {
+    return node != null && !node.isNull() && !node.asText().isEmpty();
+  }
+
+  private static String requireText(JsonNode node, String fieldName, String requirement) {
+    if (!hasText(node)) {
+      throw new IllegalArgumentException(customPropertyError(fieldName, requirement));
+    }
+    return node.asText();
+  }
+
+  private static String referenceShapeHint() {
+    return String.format(
+        "'%s' and either '%s' or '%s'", REF_FIELD_TYPE, REF_FIELD_ID, REF_FIELD_FQN);
+  }
+
+  private static String customPropertyError(String fieldName, String detail) {
+    return String.format(CUSTOM_PROPERTY_ERROR_PREFIX, fieldName, detail);
+  }
+
+  private static String missingReferenceError(String fieldName, String type, String key) {
+    return String.format(
+        "Custom property '%s' references %s '%s' that does not exist", fieldName, type, key);
   }
 }
